--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,12 @@
 .other{
     width: 50px;
     height: 70px;
-    background-color: blue;
+    background-color: red;
     position: absolute;
     bottom: 120px;
+    background-image: url(Images/car4.jpg);
+    background-size: cover;
+
 }
 .Score{
     position: absolute;
